[FIX] small laptop screens layout cutoff

--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -40,7 +40,8 @@ body {
         align-items: center;
         display: flex;
         justify-content: center;
-        min-height: 100vh;
+        height: 100vh;
+        min-height: $main-view-height;
     }
 }
 
